--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "animejs": "^3.2.2",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
