--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
   "semi": true,
-  "trailingComa": "all",
+  "trailingComma": "all",
   "printWidth": 80,
   "endOfLine": "auto",
   "singleQuote": true,
