--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prettier --check . && stylelint --allow-empty-input \"**/*.{css,scss}\" && next build",
+    "build": "prettier --check .  && next build",
     "start": "next start",
     "lint": "prettier --check . && next lint",
     "format": "prettier --write . "
