--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "react-ionicons": "^4.2.1",
