--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
 
 # local env files
 .env*.local
@@ -36,8 +37,5 @@ yarn-error.log*
 next-env.d.ts
 
 
-yarn.*
 
 src/app/help.tsx
-src/app/files/*
-src/app/about/*
