--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run format && next build",
     "build:format": "npm run format  && next build",
     "start": "next start",
     "lint": "prettier --check . && next lint",
