--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.1.0",
+    "@rpldy/uploady": "^1.8.0",
     "animejs": "^3.2.2",
     "graphql": "^16.8.1",
     "next": "14.1.0",
