--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nextjs-progressloader": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-keep-alive": "^2.5.2",
+    "react-redux": "^9.1.0",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
