--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.1.0",
@@ -28,6 +32,7 @@
     "react-dom": "^18",
     "react-keep-alive": "^2.5.2",
     "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
@@ -44,7 +49,6 @@
     "eslint-plugin-unused-imports": "^3.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "react-ionicons": "^4.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
