--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@rpldy/uploady": "^1.8.0",
     "animejs": "^3.2.2",
+    "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "graphql": "^16.8.1",
@@ -33,7 +34,8 @@
     "react-keep-alive": "^2.5.2",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/gapi.auth2": "^0.0.60",
