adding new chat widget and resizing home page landing must

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@rpldy/uploady": "^1.8.0",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
