--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.6",
+    "swr": "^2.2.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
