--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nextjs-progressloader": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-keep-alive": "^2.5.2",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
@@ -40,6 +41,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/dropbox-chooser": "^1.0.8",
     "@types/gapi.auth2": "^0.0.60",
     "@types/node": "^20",
     "@types/react": "^18",
