--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "graphql": "^16.8.1",
+    "js-file-download": "^0.4.12",
     "jszip": "^3.10.1",
+    "msal": "^1.4.18",
     "next": "14.1.0",
     "next-seo": "^6.5.0",
     "nextjs-progressloader": "^1.2.0",
@@ -35,6 +37,7 @@
     "react-hook-form": "^7.51.3",
     "react-keep-alive": "^2.5.2",
     "react-redux": "^9.1.0",
+    "recoil": "^0.7.7",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.6",
     "swr": "^2.2.5",
