--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@rpldy/uploady": "^1.8.0",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
+    "@types/moment": "^2.13.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
@@ -28,6 +29,7 @@
     "graphql": "^16.8.1",
     "js-file-download": "^0.4.12",
     "jszip": "^3.10.1",
+    "moment": "^2.30.1",
     "msal": "^1.4.18",
     "next": "14.1.0",
     "next-seo": "^6.5.0",
