--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@rpldy/uploady": "^1.8.0",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
-    "@types/moment": "^2.13.0",
+    "algoliasearch": "^4.23.3",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "graphql": "^16.8.1",
+    "instantsearch.js": "^4.68.1",
     "js-file-download": "^0.4.12",
     "jszip": "^3.10.1",
     "moment": "^2.30.1",
@@ -38,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-instantsearch": "^7.8.1",
     "react-keep-alive": "^2.5.2",
     "react-redux": "^9.1.0",
     "recoil": "^0.7.7",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "@types/dropbox-chooser": "^1.0.8",
     "@types/gapi.auth2": "^0.0.60",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
