--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "graphql": "^16.8.1",
+    "instantsearch.css": "^8.1.0",
     "instantsearch.js": "^4.68.1",
     "js-file-download": "^0.4.12",
     "jszip": "^3.10.1",
