--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@rpldy/uploady": "^1.8.0",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
