--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^9.1.0",
     "recoil": "^0.7.7",
     "redux-persist": "^6.0.0",
+    "shortid": "^2.2.16",
     "swiper": "^11.0.6",
     "swr": "^2.2.5",
     "uuid": "^9.0.1"
@@ -56,6 +57,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/shortid": "^0.0.32",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
