--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
+    "framer-motion": "^11.2.13",
     "graphql": "^16.8.1",
     "instantsearch.css": "^8.1.0",
     "instantsearch.js": "^4.68.1",
