--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run format && next build",
+    "build": "next build",
     "build:format": "npm run format  && next build",
-    "start": "next start",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "export": "next export",
     "lint": "npx prettier --check . && next lint",
     "format": "npx prettier --write . "
   },
@@ -25,6 +26,7 @@
     "algoliasearch": "^4.23.3",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
+    "cross-env": "^7.0.3",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "framer-motion": "^11.2.13",
